2008-03-13  Ethan A Merritt  <merritt@u.washington.edu>

	* config/config.cyg config/config.dj2 config/config.mgw config/config.nt
	config/config.os2 config/config.oww config/config.wc configure.in
	src/datafile.c src/datafile.h src/gadgets.c src/gadgets.h src/gp_types.h
	src/graph3d.c src/graph3d.h src/graphics.c src/graphics.h src/hidden3d.c
	src/plot2d.c src/plot2d.h src/plot3d.c src/pm3d.c src/save.c src/set.c
	src/show.c src/tables.c src/tables.h src/unset.c src/util3d.c
	src/util3d.h:  Code cleanup of options no longer marked EXPERIMENTAL.

	Remove conditional build flags EAM_HISTOGRAMS and EAM_DATASTRINGS.
	Due to bit rot, it was not possible to build current cvs without these
	anyhow.  When last measured, the change in code size due to joint
	omission of these options was 1.5%.

	* src/axis.c src/breaders.c src/datafile.c src/color.c src/command.c
	src/datafile.c src/gadgets.c src/graphics.c src/mouse.c src/plot3d.c
	src/pm3d.c src/pm3d.h src/save.c src/set.c src/show.c src/unset.c:
	Remove dead code, obsolete comments, leftover debug code.
	No more PM3D_HAVE_SOLID EQUAL_SYMBOL_NOT_REQUIRED OLDUNSETTICS

	* configure.in src/breaders.c src/breaders.h src/datafile.c
	src/datafile.h src/plot2d.c src/plot3d.c src/set.c src/show.c
	src/unset.c src/Makefile.am: No more BINARY_DATA_FILE conditionals.
	Due to bit rot, one could not build with this disabled, and other
	options depend on it.

	* demo/all.dem: Add circles.dem to the set of "all" demos.

2008-03-13  Carl Troein  <troein@users.sourceforge.net>

	* term/post.trm (PS_filled_polygon): Limit the number of consecutive
	relative moves in order to avoid accumulated round-off error.

2008-03-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data store2d_point) src/graphics.c (plot_boxes):
	Alter processing of "with boxes" to handle specification of a column
	containing variable color information.  Modify "with circles" to use
	the same mechanism.
	Bug #1910587
